Remove dead method